# WoodenBoardsShop

./: .dockerignore  .env.ci  .env.dev  .env.example  .gitignore  .gitlab-ci.yml  ALIVE_DATA_FEATURES.md  CATALOG_FIXES_SUMMARY.md  CHANGELOG_UUID_GENERATION.md  CHAT_SYSTEM_GUIDE.md  CHAT_TESTING_GUIDE.md  CI-CD-README.md  COMPLETE_IMAGE_SAVING_SOLUTION.md  COMPREHENSIVE_RUSSIAN_LOCALIZATION_COMPLETE.md  CONFIGURATION_AUDIT_SUMMARY.md  DATA_GENERATION.md  DATA_GENERATOR_IMPROVEMENTS.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_OPTIMIZATION.md  DOCKER_UPLOADS_FIX.md  ENVIRONMENT_AUDIT_SUMMARY.md  FINAL_ALIVE_DATA_REPORT.md  FINAL_REPORT.md  FRONTEND_BACKEND_INTEGRATION.md  GENERATOR_UPGRADE_SUMMARY.md  IMAGE_SAVING_FIX.md  IMAGE_STORAGE_STRUCTURE.md  Makefile  PIPELINE-SUMMARY.md  PRODUCTION_SETUP.md  PRODUCT_PAGE_GUIDE.md  PRODUCT_SEARCH_API_FIXES.md  README.md  SELLER_DASHBOARD_FIX.md  SELLER_PRODUCTS_SECURITY_IMPLEMENTATION.md  TESTING_COMMANDS_SUMMARY.md  TESTING_REBUILD_GUIDE.md  TODO.md  docker-compose.ci.yml  (+18 more)
backend/prosto_board_volume-main/backend/: .dockerignore  .env_sample  Dockerfile  README.md  main.py  pyproject.toml
backend/prosto_board_volume-main/backend/api/: healthcheck.py  wooden_boards_volume_seg.py
backend/prosto_board_volume-main/backend/core/: logging_config.py  settings.py
backend/prosto_board_volume-main/backend/logs/: .gitignore
backend/prosto_board_volume-main/backend/schemas/: detect.py  (+1 more)
backend/prosto_board_volume-main/detect/: .dockerignore  .env_sample  Dockerfile  README.md  docker_requirements.txt  main.py  pyproject.toml
(+872 files in other folders)
