[project]
name = "detect"
version = "0.1.0"
description = "Detection service for wooden boards volume detection"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.8",
    "pillow>=11.1.0",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "ultralytics>=8.3.75",
]
